crates/ars-components/src/overlay/snapshots/ars_components__overlay__popover__tests__popover_description_without_id.snap
---
source: crates/ars-components/src/overlay/popover.rs
expression: "snapshot_attrs(&service.connect(&|_| {}).description_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "description",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "popover",
            ),
        ),
    ],
    styles: [],
}
