crates/ars-components/src/overlay/snapshots/ars_components__overlay__popover__tests__popover_positioner_default.snap
---
source: crates/ars-components/src/overlay/popover.rs
expression: "snapshot_attrs(&service.connect(&|_| {}).positioner_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "positioner",
            ),
        ),
        (
            Data(
                "ars-placement",
            ),
            String(
                "bottom",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "popover",
            ),
        ),
        (
            Data(
                "ars-state",
            ),
            String(
                "open",
            ),
        ),
    ],
    styles: [],
}
